--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1116,6 +1116,10 @@ tbody tr td {
     .edit-icon{
         color: #2F9456;
     }
+    .order-input-field{
+        display: flex;
+        flex-direction: column;
+    }
 @media screen and (max-width: 1050px) and (min-width:920px) {
     .job-search-field {
         flex-direction: column;
@@ -1242,6 +1246,9 @@ tbody tr td {
 }
 
 @media screen and (max-width: 768px) {
+    .order-input-field{
+        width: 100%;
+    }
     .construction-btn {
         margin-left: 5px;
         margin-bottom: 3px;
@@ -1327,6 +1334,7 @@ tbody tr td {
 
     .form-fields {
         flex-direction: column;
+
     }
 
     .register-label {
