--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -963,9 +963,10 @@ tbody tr td {
 .update-btn {
     background-color: #2F9456;
     border: 1px solid #2F9456;
+    border-radius: 2px;
     color: #fff;
     width: 110px;
-    height: 42px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
