--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -48,7 +48,6 @@
     src: url(../css/fonts/googlefonts/NotoSansJP-Thin.otf);
 }
 
-/* ***************** LOGIN CSS START ********************** */
 
 .wrap-input100 .label-input100 {
     font-family: NotoSansJP-Medium;
@@ -58,10 +57,10 @@
     opacity: 1;
 }
 
-/* ***************** LOGIN CSS END ********************** */
-.main-site{
+.main-site {
     overflow-y: hidden;
 }
+
 .main-login {
     width: 100%;
     margin: 0 auto;
@@ -100,10 +99,6 @@
     padding: 77px 15px 15px 15px;
 }
 
-
-/*------------------------------------------------------------------
-  [ Form ]*/
-
 .login100-form {
     width: 100%;
 }
@@ -117,11 +112,6 @@
     text-align: center;
     padding-bottom: 49px;
 }
-
-
-
-/*------------------------------------------------------------------
-  [ Input ]*/
 
 .wrap-input100 {
     display: flex;
@@ -156,13 +146,6 @@
     margin: 40px auto 0px;
 }
 
-/*---------------------------------------------*/
-
-
-
-
-/*------------------------------------------------------------------
-  [ Button ]*/
 .container-login100-form-btn {
     display: -webkit-box;
     display: -webkit-flex;
@@ -174,6 +157,7 @@
     margin-top: 46px;
 
 }
+
 .login-logo {
     width: 196px;
     margin: auto;
@@ -208,7 +192,6 @@
 
 #top-navbar {
     position: absolute;
-    /* float: none; */
     margin-left: auto;
 }
 
@@ -222,12 +205,14 @@
     color: var(--black);
     opacity: 0.3;
 }
-.setting-toggle-end a{
-font-size:16px;
-font-weight: 400;
-color: #000000DE;
-font-family: NotoSansJP-Regular;
+
+.setting-toggle-end a {
+    font-size: 16px;
+    font-weight: 400;
+    color: #000000DE;
+    font-family: NotoSansJP-Regular;
 }
+
 .setting-toggle {
     background-color: #ffff;
     width: 76px;
@@ -673,10 +658,12 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 2px;
     margin-right: 4px;
 }
-.taking-btn:hover{
+
+.taking-btn:hover {
     color: #fff;
     text-decoration: none;
 }
+
 .taking-btn {
     width: 80px;
     height: 30px;
@@ -771,11 +758,12 @@ table.dataTable thead>tr>td.sorting_desc:after {
 
 .account-reg-lablel {
     width: 40%;
- 
+
 }
-.account-reg-lablel label{
+
+.account-reg-lablel label {
     font-size: 16px;
-    font-weight:400;
+    font-weight: 400;
     font-family: NotoSansJP-Regular;
     color: #000000;
     margin-bottom: 0px;
@@ -874,7 +862,7 @@ table.dataTable thead>tr>td.sorting_desc:after {
     border-radius: 4px;
     box-shadow: 0px 3px 6px var(--black);
     padding: 40px 0px 48px 48px;
-   
+
 }
 
 .master-registration-content {
@@ -897,7 +885,6 @@ tbody tr {
 
 tbody tr td {
     text-align: center;
-    /* text-align: left; */
     font-size: 12px;
     letter-spacing: 0px;
     color: #000000;
@@ -977,8 +964,6 @@ tbody tr td {
     border: 1px solid #2F9456;
     border-radius: 2px;
     color: #fff;
-    /* width: 110px;
-    height: 30px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1032,10 +1017,12 @@ tbody tr td {
     box-shadow: 0px 3px 6px var(--black);
     padding: 40px 0px 48px 48px;
 }
-.gm-reg-radio-buttton input[type="radio"]{
-    accent-color:darkgoldenrod;
 
-  }
+.gm-reg-radio-buttton input[type="radio"] {
+    accent-color: darkgoldenrod;
+
+}
+
 .generated-reg-input input {
     height: 37px;
     width: 100%;
@@ -1065,7 +1052,6 @@ tbody tr td {
 
 .registration-table td,
 .registration-table th {
-    /* border: 1px solid #ddd; */
     padding: 8px;
     font-size: 12px;
     text-align: center;
@@ -1074,13 +1060,11 @@ tbody tr td {
     color: #000000;
 }
 
-/* .registration-table tr:hover {
-    background-color: #ddd;
-} */
+
 
 
 .registration-table th {
-    
+
     font-family: NotoSansJP-Regular;
     text-align: left;
     background-color: black;
@@ -1124,32 +1108,40 @@ tbody tr td {
 }
 
 /* UTILITIES CLASSES  */
-.f-12-regular th , .f-12-regular td{
+.f-12-regular th,
+.f-12-regular td {
     font-size: 12px;
     font-family: NotoSansJP-Regular;
     font-weight: 400;
-    }
-.f-16-regular{
+}
+
+.f-16-regular {
     font-size: 16px;
     font-family: NotoSansJP-Regular;
     font-weight: 400;
-    }
-    .delete-icon{
-        color: red;
-    }
-    .edit-icon{
-        color: #2F9456;
-    }
-    .order-input-field{
-        display: flex;
-        flex-direction: column;
-    }
-    .table-col td:nth-child(even){
-        background:#F5F5F5;
-    }
-    .custom-table-list thead th{
-            text-align: center !important   ;
-    } 
+}
+
+.delete-icon {
+    color: red;
+}
+
+.edit-icon {
+    color: #2F9456;
+}
+
+.order-input-field {
+    display: flex;
+    flex-direction: column;
+}
+
+.table-col td:nth-child(even) {
+    background: #F5F5F5;
+}
+
+.custom-table-list thead th {
+    text-align: center !important;
+}
+
 @media screen and (max-width: 1050px) and (min-width:920px) {
     .job-search-field {
         flex-direction: column;
@@ -1187,16 +1179,18 @@ tbody tr td {
     .master-registration-form {
         padding: 40px 15px 48px 15px;
     }
-    .table-col{
+
+    .table-col {
         height: 48vh;
     }
 }
 
 @media screen and (max-width: 920px) and (min-width:769px) {
-    .update-btn{
+    .update-btn {
         width: max-content;
         height: 31px;
     }
+
     .job-form-control {
         width: 100%;
     }
@@ -1259,7 +1253,8 @@ tbody tr td {
     .custom-table-list.dataTable {
         width: max-content;
     }
-    .table-col{
+
+    .table-col {
         height: 34vh;
     }
 }
@@ -1286,22 +1281,28 @@ tbody tr td {
 }
 
 @media screen and (max-width: 768px) {
-    .footer-nav-section{
+    .footer-nav-section {
         border-top: 4px solid;
-        border-image: linear-gradient(270deg, #4E3000 0%, #D6CDA2 17%, #987B3A 34%, #E0CDA2 49%, #836343 73%, #E6C466 100%) 1% 0%;    }
-    .update-btn{
+        border-image: linear-gradient(270deg, #4E3000 0%, #D6CDA2 17%, #987B3A 34%, #E0CDA2 49%, #836343 73%, #E6C466 100%) 1% 0%;
+    }
+
+    .update-btn {
         width: max-content;
         height: 41px;
     }
+
     .main-site {
         overflow-y: inherit;
     }
-    .table-col{
+
+    .table-col {
         height: 48vh;
     }
-    .order-input-field{
+
+    .order-input-field {
         width: 100%;
     }
+
     .construction-btn {
         margin-left: 5px;
         margin-bottom: 3px;
@@ -1447,15 +1448,12 @@ tbody tr td {
         display: block;
     }
 
-    /* .registration-left-content{
-        padding: 0px 15px;
-    } */
     .register-btn,
     .clear-btn {
         width: 71px;
         height: 42px;
     }
-  
+
 
     .master-form-col {
         padding: 0px;
@@ -1468,9 +1466,10 @@ tbody tr td {
     .master-registration-left-content {
         width: 100%;
     }
+
     .account-reg-lablel {
         width: 100%;
-     
+
     }
 
 }
@@ -1544,13 +1543,3 @@ tbody tr td {
         padding: 60px 15px 10px 15px;
     }
 }
-
-/* @media screen and (max-width: 2400px) and (min-width:1380px){
-
-    .table-responsive-sm::-webkit-scrollbar {
-        display: none;
-    }
-}
-table.dataTable{
-    width: max-content !important;
-} */
